Switch to local PostgreSQL, add HikariCP connection pooling, add README